--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,7 +27,7 @@ helidon-config = { group = "io.helidon.config", name = "helidon-config"}
 helidon-health = { group = "io.helidon.health", name = "helidon-health-checks"}
 
 jUnit-bom = { group = "org.junit", name = "junit-bom", version.ref = "jUnit" }
-jUnit-jupiter = { group = "org.junit.jupiter", name = "Function…", version.ref = "jUnit" }
+jUnit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "jUnit" }
 assertj-core = { group = "org.assertj", name ="assertj-core", version.ref = "assertJ" }
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
 mockito-jupiter = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
