--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -8,12 +8,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Lint
         run: ./gradlew spotlessCheck
       - name: Assemble
         run: ./gradlew clean assemble
+      - name: Test
+        run: ./gradlew clean test
+      - name: IntegrationTest
+        run: ./gradlew clean integrationTest
